Closed Bug 863975 Opened 12 years ago Closed 12 years ago

Truncated second frame causes assertion failure [@mozilla::image::Decoder::PostDecodeDone]

Categories

(Core :: Graphics: ImageLib, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: posidron, Assigned: joe)

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(4 files)

Attached image testcase
Tested with m-i changeset: 129367:9ff5c0134bbf
Attached file callstack
Severity: normal → critical
Hardware: x86 → x86_64
Crash Signature: [@ mozilla::image::Decoder::PostDecodeDone] → [@ mozalloc_abort(char const*) | NS_DebugBreak | mozilla::image::Decoder::PostDecodeDone() ]
Assignee: nobody → joe
Summary: PNG crash [@mozilla::image::Decoder::PostDecodeDone] → Truncated second frame causes assertion failure [@mozilla::image::Decoder::PostDecodeDone]
Our frame counting and error handling has simply changed, so we need to handle the case that we're left in the middle of a frame because a frame is truncated or in error. https://tbpl.mozilla.org/?tree=Try&rev=2733ba66c1d4
Attachment #740375 - Flags: review?(seth)
Attached patch crashtestSplinter Review
This is Christoph's testcase.
Attachment #740376 - Flags: review?(seth)
Another try at try since infrastructure gave us false timeouts for much of today: https://tbpl.mozilla.org/?tree=Try&rev=d5db482e2613
Comment on attachment 740375 [details] [diff] [review] PostFrameDone if we're in the middle of a frame and recovering Review of attachment 740375 [details] [diff] [review]: ----------------------------------------------------------------- Looks good.
Attachment #740375 - Flags: review?(seth) → review+
Attachment #740376 - Flags: review?(seth) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: