Bug 863975 - Handle the situation that we're left mid-frame when decoding a multi-frame image. r=seth